--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,48 @@
-argon2-cffi==21.1.0
-attrs==21.2.0
 backcall==0.2.0
-bleach==4.1.0
-brotlipy==0.7.0
+bokeh==2.4.1
 certifi==2021.10.8
-cffi==1.14.6
-charset-normalizer==2.0.4
-conda==4.10.3
-conda-package-handling==1.7.3
-cryptography==35.0.0
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
-defusedxml==0.7.1
 entrypoints==0.3
-idna==3.2
 ipykernel==6.5.0
 ipython==7.29.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
 jedi==0.18.0
 Jinja2==3.0.3
-jsonschema==4.2.1
-jupyter==1.0.0
+joblib==1.1.0
 jupyter-client==7.0.6
-jupyter-console==6.4.0
 jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+llvmlite==0.37.0
 MarkupSafe==2.0.1
+matplotlib==3.4.3
 matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.5.5
-nbconvert==6.2.0
-nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.5
+numba==0.54.1
+numpy==1.20.3
 packaging==21.2
-pandocfilters==1.5.0
+pandas==1.3.4
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pip==21.2.4
-prometheus-client==0.12.0
+Pillow==8.4.0
+plotly==5.3.1
 prompt-toolkit==3.0.22
 ptyprocess==0.7.0
-pycosat==0.6.3
-pycparser==2.20
 Pygments==2.10.0
-pyOpenSSL==21.0.0
 pyparsing==2.4.7
-pyrsistent==0.18.0
-PySocks==1.7.1
 python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==6.0
 pyzmq==22.3.0
-qtconsole==5.2.0
-QtPy==1.11.2
-requests==2.26.0
-ruamel-yaml-conda==0.15.100
-Send2Trash==1.8.0
-setuptools==58.0.4
+scikit-learn==1.0.1
+scipy==1.7.2
+seaborn==0.11.2
 six==1.16.0
-terminado==0.12.1
-testpath==0.5.0
+sklearn==0.0
+tenacity==8.0.1
+threadpoolctl==3.0.0
 tornado==6.1
-tqdm==4.62.3
 traitlets==5.1.1
-urllib3==1.26.7
+typing-extensions==3.10.0.2
 wcwidth==0.2.5
-webencodings==0.5.1
-wheel==0.37.0
-widgetsnbextension==3.5.2
